--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/material": "^5.2.2",
+    "@mui/styled-engine-sc": "^5.1.0",
+    "@svgr/webpack": "^6.0.0",
     "autoprefixer": "^10.4.0",
     "next": "12.0.4",
     "postcss": "^8.4.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "styled-components": "^5.3.3",
     "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
