--- a/package.json
+++ b/package.json
@@ -13,14 +13,29 @@
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.2",
     "@mui/styled-engine-sc": "^5.1.0",
+    "@prisma/client": "^3.6.0",
     "@svgr/webpack": "^6.0.0",
+    "@types/react-redux": "^7.1.20",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
+    "@types/yup": "^0.29.13",
     "autoprefixer": "^10.4.0",
+    "axios": "^0.24.0",
+    "bcryptjs": "^2.4.3",
+    "formik": "^2.2.9",
+    "joi": "^17.5.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.0.4",
     "postcss": "^8.4.4",
+    "prisma": "3.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3",
-    "tailwindcss": "^2.2.19"
+    "tailwindcss": "^2.2.19",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^16.11.11",
